src/main/java/com/example/JOBSHOP/JOBSHOP/errors/duplicatedRecordException.java
package com.example.JOBSHOP.JOBSHOP.errors;

public class duplicatedRecordException extends RuntimeException {

	public duplicatedRecordException() {
		super();
		// TODO Auto-generated constructor stub
	}

	public duplicatedRecordException(String message) {
		super(message);
		// TODO Auto-generated constructor stub
	}

}
